--- a/app.json
+++ b/app.json
@@ -8,30 +8,12 @@
     "pages/order/image-cropper/index",
     "pages/gallery/index",
     "pages/gallery/preview/index",
+    "pages/gallery/tasks/index",
+    "pages/gallery/task-detail/index",
     "pages/gallery/choose-gallery/index",
     "pages/workflow/pic-styles/index",
     "pages/workflow/generate/index",
-    "pages/usercenter/index",
-    "pages/usercenter/person-info/index",
-    "pages/usercenter/address/list/index",
-    "pages/usercenter/address/edit/index",
-    "pages/usercenter/name-edit/index",
-    "pages/cart/index",
-    "pages/order/order-confirm/index",
-    "pages/order/receipt/index",
-    "pages/order/pay-result/index",
-    "pages/order/order-list/index",
-    "pages/order/order-detail/index",
-    "pages/order/apply-service/index",
-    "pages/order/after-service-list/index",
-    "pages/order/after-service-detail/index",
-    "pages/coupon/coupon-list/index",
-    "pages/coupon/coupon-detail/index",
-    "pages/coupon/coupon-activity-goods/index",
-    "pages/promotion-detail/index",
-    "pages/order/fill-tracking-no/index",
-    "pages/order/delivery-detail/index",
-    "pages/order/invoice/index"
+    "pages/usercenter/index"
   ],
   "tabBar": {
     "custom": true,
@@ -54,7 +36,7 @@
       }
     ]
   },
-  "requiredPrivateInfos": ["chooseAddress"],
+  "requiredPrivateInfos": [],
   "lazyCodeLoading": "requiredComponents",
   "usingComponents": {},
   "window": {
